Fix: Refactor KontaktinformasjonForDoedsboService to use JsonNode and improve address mapping #deploy-pdl-forvalter #deploy-test-pdl-forvalter